--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mkdocs-bootstrap4",
+  "name": "mkdocs-theme-bootstrap4",
   "version": "0.1.2",
   "description": "A vanilla Bootstrap 4 theme",
-  "repository": "git@github.com:LukeCarrier/mkdocs-bootstrap4.git",
+  "repository": "git@github.com:LukeCarrier/mkdocs-theme-bootstrap4.git",
   "author": "Luke Carrier <luke@carrier.im>",
   "license": "MIT",
   "private": true,
